--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
 
-    <!-- fave icon -->
+    <!-- fave icon image -->
     <link rel="shortcut icon" href="image/baground_black.webp" type="image/x-icon" />
 
     <!-- ------font awsome cdn link --------- -->
@@ -101,136 +101,6 @@
         </div>
         <!-- ---------------- image scrolling div end-------------- -->
     </div>
-    <!-- ----------servecess sectins --------------- -->
-
-    <div class="serveces pb-5">
-
-        <h1 class="pb-4 text-white text-center cetagory_text">Our Services Category</h1>
-        <div class="row container-fluid">
-
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-12">
-                <a class="card1" href="#">
-                    <div class="font_awasome">
-                        <i class="fa-solid fa-plane"></i>
-                    </div>
-                    <h3>Plances Serveces</h3>
-                    <p class="small py-1">We will be exploring the beautiful city of Traveling world. Our tour guide
-                        will
-                        provide and architecture</p>
-                    <div class="go-corner" href="#">
-                        <div class="go-arrow">
-                            →
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-12">
-                <a class="card1" href="#">
-                    <div class="font_awasome">
-                        <i class="fa-solid fa-bus"></i>
-                    </div>
-                    <h3>Bus Serveces</h3>
-                    <p class="small py-1">Our bus will then take us to the scenic traveling world, where you can enjoy a
-                        peaceful stroll
-                        among the
-                        gardens.</p>
-                    <div class="go-corner" href="#">
-                        <div class="go-arrow">
-                            →
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-12">
-                <a class="card1" href="#">
-                    <div class="font_awasome">
-                        <i class="fa-solid fa-bed"></i>
-                    </div>
-                    <h3>Hotel Serveces</h3>
-                    <p class="small py-1">Room service is a convenient option for guests who prefer to dine in the
-                        privacy of their rooms.</p>
-                    <div class="go-corner" href="#">
-                        <div class="go-arrow">
-                            →
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 col-12">
-                <a class="card1" href="#">
-                    <div class="font_awasome">
-                        <i class="fa-solid fa-notes-medical"></i>
-                    </div>
-                    <h3>Helth Serveces</h3>
-                    <p class="small py-1">We will be exploring the beautiful city of Traveling world. Our tour guide
-                        will
-                        provide and architecture</p>
-                    <div class="go-corner" href="#">
-                        <div class="go-arrow">
-                            →
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-
-
-        </div>
-
-    </div>
-    <!-- ----------servecess sectins end --------------- -->
-
-    <!-- -----------Explore our traveling services------------ -->
-    <section class=" Explore ">
-        <div class="row px-4 py-3">
-
-            <div class="card mb-3 g-2 ">
-                <div class="row g-0 d-flex align-items-center">
-                    <div class="col-12 col-md-6 ">
-                        <div class="">
-                            <img src="https://img.freepik.com/premium-photo/rear-view-asian-man-hat-with-suitcase-bag-backpack-walking-beach_9083-3246.jpg"
-                                class="img-fluid rounded-start w-100 h-50" style="height: 782px;">
-
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 ps-md-5">
-                        <div class="card-body ">
-                            <h1 class="display-6 fw-bolder">Exploring Our Traveling Servies</h1>
-                            <p class="mt-3">Travel content strives to produce consistent communication materials (blog
-                                posts, images, videos, etc ) that customers
-                                will find helpful while crawling through the web. Travel content does not promote a
-                                brand like traditional advertising.
-                            </p>
-                            <p class="">100,000+ High-Quality Servies
-
-                            </p>
-                            <div class="d-flex mt-5 gap-3 flex-wrap">
-                                <div>
-                                    <h3 class=" fw-bolder">300+</h3>
-                                    <p class="fs-6 text-secondary fw-semibold">Traveling Vish</p>
-                                </div>
-                                <div>
-                                    <h3 class="fw-bolder">6M+</h3>
-                                    <p class="fs-6 text-secondary fw-semibold">Members</p>
-                                </div>
-                                <div>
-                                    <h3 class="fw-bolder">2M+</h3>
-                                    <p class="fs-6 text-secondary fw-semibold">Positive ratings</p>
-                                </div>
-                            </div>
-                            <button type="button"
-                                class="btn  text-white fw-semibold px-4 py-1  px-md-4 py-md-2 fs-5 mt-md-2">Explore
-                                More
-                            </button>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
 
     <!-- ----------FAVORITE TRAVEL MEMORIES ----------- -->
 
@@ -310,216 +180,6 @@
     </section>
     <!-- ----------FAVORITE TRAVEL MEMORIES  Emd----------- -->
 
-    <!-- -----------------client review ------------------ -->
-    <div class="review-client">
-        <swiper-container class="mySwiper" pagination="true" pagination-clickable="true" navigation="true"
-            space-between="30" centered-slides="true" autoplay-delay="2500" autoplay-disable-on-interaction="false">
-
-            <swiper-slide>
-                <div class="container">
-                    <div class="testimonial-box">
-                        <div class="testimonial">
-                            <i class="fas fa-quote-right"></i>
-                            <span class="testimonial-text text-start">I recently took a tour with this travel company,
-                                and I have
-                                to say it was one of the best experiences I've ever had. The
-                                itinerary was well-planned and provided a great balance between sightseeing and
-                                downtime, and the accommodations were
-                                comfortable and conveniently located</span>
-                            <div class="testimonial-user">
-                                <img src="https://randomuser.me/api/portraits/women/17.jpg" alt="user-img"
-                                    class="user-img">
-                                <div class="user-info">
-                                    <span class="user-name">Tuli</span>
-                                    <div class="user-job-details">
-                                        <span class="user-job pe-3">india</span>
-                                        <div class="line"></div>
-                                        <span class="user-post"> 2022</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </swiper-slide>
-            <swiper-slide>
-                <div class="container">
-                    <div class="testimonial-box">
-                        <div class="testimonial">
-                            <i class="fas fa-quote-right"></i>
-                            <span class="testimonial-text text-start">I recently took a tour with this travel company,
-                                and I have
-                                to say it was one of the best experiences I've ever had. The
-                                itinerary was well-planned and provided a great balance between sightseeing and
-                                downtime, and the accommodations were
-                                comfortable and conveniently located</span>
-                            <div class="testimonial-user">
-                                <img src="https://image.shutterstock.com/image-photo/young-handsome-man-beard-wearing-260nw-1768126784.jpg"
-                                    alt="user-img" class="user-img">
-                                <div class="user-info">
-                                    <span class="user-name">Rasel Khan</span>
-                                    <div class="user-job-details">
-                                        <span class="user-job">Ban </span>
-                                        <div class="line"></div>
-                                        <span class="user-post"> 2023</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </swiper-slide>
-            <swiper-slide>
-                <div class="container">
-                    <div class="testimonial-box">
-                        <div class="testimonial">
-                            <i class="fas fa-quote-right"></i>
-                            <span class="testimonial-text text-start">I recently took a tour with this travel company,
-                                and I have
-                                to say it was one of the best experiences I've ever had. The
-                                itinerary was well-planned and provided a great balance between sightseeing and
-                                downtime, and the accommodations were
-                                comfortable and conveniently located</span>
-                            <div class="testimonial-user">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT0sWwaZ5nF5KXCDa_nQhR2hL2K3ZQWlZzbXlPlSwDt76o4eZeTBbfb6kGQBoFLZTZIHG8&usqp=CAU"
-                                    alt="user-img" class="user-img">
-                                <div class="user-info">
-                                    <span class="user-name">Amir</span>
-                                    <div class="user-job-details">
-                                        <span class="user-job pe-3">india</span>
-                                        <div class="line"></div>
-                                        <span class="user-post"> 2023</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </swiper-slide>
-            <swiper-slide>
-                <div class="container">
-                    <div class="testimonial-box">
-                        <div class="testimonial">
-                            <i class="fas fa-quote-right"></i>
-                            <span class="testimonial-text text-start">I recently took a tour with this travel company,
-                                and I have
-                                to say it was one of the best experiences I've ever had. The
-                                itinerary was well-planned and provided a great balance between sightseeing and
-                                downtime, and the accommodations were
-                                comfortable and conveniently located</span>
-                            <div class="testimonial-user">
-                                <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cGVyc29ufGVufDB8fDB8fA%3D%3D&w=1000&q=80"
-                                    alt="user-img" class="user-img">
-                                <div class="user-info">
-                                    <span class="user-name">Ritu</span>
-                                    <div class="user-job-details">
-                                        <span class="user-job pe-3">Sri</span>
-                                        <div class="line"></div>
-                                        <span class="user-post"> 2020</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </swiper-slide>
-            <swiper-slide>
-                <div class="container">
-                    <div class="testimonial-box">
-                        <div class="testimonial">
-                            <i class="fas fa-quote-right"></i>
-                            <span class="testimonial-text text-start">I recently took a tour with this travel company,
-                                and I have
-                                to say it was one of the best experiences I've ever had. The
-                                itinerary was well-planned and provided a great balance between sightseeing and
-                                downtime, and the accommodations were
-                                comfortable and conveniently located</span>
-                            <div class="testimonial-user">
-                                <img src="https://media.istockphoto.com/id/1288634698/photo/beautiful-caucasian-teenager-smiling-happy-standing-at-the-city.jpg?s=170667a&w=0&k=20&c=fXAqV1uAAt78wOrP5QQrrVIrOYgJ8aBZqKwpexpDfSw="
-                                    alt="user-img" class="user-img">
-                                <div class="user-info">
-                                    <span class="user-name">Tinu</span>
-                                    <div class="user-job-details">
-                                        <span class="user-job pe-3">Pak</span>
-                                        <div class="line"></div>
-                                        <span class="user-post"> 2023</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </swiper-slide>
-            <swiper-slide>
-                <div class="container">
-                    <div class="testimonial-box">
-                        <div class="testimonial">
-                            <i class="fas fa-quote-right"></i>
-                            <span class="testimonial-text text-start">I recently took a tour with this travel company,
-                                and I have
-                                to say it was one of the best experiences I've ever had. The
-                                itinerary was well-planned and provided a great balance between sightseeing and
-                                downtime, and the accommodations were
-                                comfortable and conveniently located</span>
-                            <div class="testimonial-user">
-                                <img src="https://randomuser.me/api/portraits/women/17.jpg" alt="user-img"
-                                    class="user-img">
-                                <div class="user-info">
-                                    <span class="user-name">Tuli</span>
-                                    <div class="user-job-details">
-                                        <span class="user-job pe-3">india</span>
-                                        <div class="line"></div>
-                                        <span class="user-post"> 2022</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </swiper-slide>
-            <swiper-slide>
-                <div class="container">
-                    <div class="testimonial-box">
-                        <div class="testimonial">
-                            <i class="fas fa-quote-right"></i>
-                            <span class="testimonial-text text-start">I recently took a tour with this travel company,
-                                and I have
-                                to say it was one of the best experiences I've ever had. The
-                                itinerary was well-planned and provided a great balance between sightseeing and
-                                downtime, and the accommodations were
-                                comfortable and conveniently located</span>
-                            <div class="testimonial-user">
-                                <img src="https://image.shutterstock.com/image-photo/young-handsome-man-beard-wearing-260nw-1768126784.jpg"
-                                    alt="user-img" class="user-img">
-                                <div class="user-info">
-                                    <span class="user-name">Rasel Khan</span>
-                                    <div class="user-job-details">
-                                        <span class="user-job">Ban </span>
-                                        <div class="line"></div>
-                                        <span class="user-post"> 2023</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </swiper-slide>
-            <swiper-slide>
-                <h1 class="text-center text-white">Thank you</h1>
-            </swiper-slide>
-        </swiper-container>
-        <div class="support">
-            <a href="https://twitter.com/DevLoop01" target="_blank"><i class="fab fa-twitter-square"></i></a>
-            <a href="https://codepen.io/dev_loop/" target="_blank"><i class="fab fa-codepen"></i></a>
-        </div>
-    </div>
 
     <!-- ============== from section ============= -->
     <section class="section03">
@@ -615,6 +275,8 @@
         <p class="small text-muted mb-0 text-center copyright">&copy; Copyrights. All rights reserved. <a
                 class="text-primary" href="#">Traveling world.com</a></p>
     </footer>
+
+
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
